--- a/barleyBar Photos.vcxproj.filters
+++ b/barleyBar Photos.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="PhotoPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MovingPhotosManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BarleyPhoto.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PhotoPanel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MovingPhotosManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
